Opened 17 years ago

Closed 17 years ago

#1644 closed bug (fixed)

the pthread_key_create_1-2 posix test fails

Reported by: kaoutsis Owned by: axeld
Priority: normal Milestone: R1
Component: System/libroot.so Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

source file: src/tests/system/libroot/posix/posixtestsuite/conformance/interfaces/pthread_key_create/1-2.c

the failure output is: Test FAILED: Could not use a certain key value to set for many keys

Change History (6)

comment:1 by bonefish, 17 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev23009.

comment:2 by kaoutsis, 17 years ago

Resolution: fixed
Status: closedreopened

hrev24958

Thread 9026 caused an exception: Segment violation
Reading symbols from /boot/beos/system/lib/libroot.so...done.
Loaded symbols for /boot/beos/system/lib/libroot.so
[tcsetpgrp failed in terminal_inferior: Invalid Argument]
[Switching to team ./pthread_key_create_1-2 (9025) thread pthread func (9026)]
0x002352f5 in __pthread_cleanup_pop_handler ()
   from /boot/beos/system/lib/libroot.so
(gdb) where
#0  0x002352f5 in __pthread_cleanup_pop_handler ()
   from /boot/beos/system/lib/libroot.so
#1  0x00234df1 in pthread_destroy_thread ()
   from /boot/beos/system/lib/libroot.so
#2  0x0022601e in _thread_do_exit_notification ()
   from /boot/beos/system/lib/libroot.so
#3  0x00225fa8 in exit_thread () from /boot/beos/system/lib/libroot.so
#4  0x00234fdb in pthread_exit () from /boot/beos/system/lib/libroot.so
#5  0x00200a5a in a_thread_func ()
#6  0x00234e67 in pthread_thread_entry () from /boot/beos/system/lib/libroot.so
#7  0x00225e60 in thread_entry () from /boot/beos/system/lib/libroot.so
#8  0x7003ffec in ?? ()
(gdb)  

comment:3 by kaoutsis, 17 years ago

also know fails the pthread_key_create_3-1 invokes the gdb in pthread_cleanup_pop_handler() exactly as above, (there is no need to open another ticket, i think, fixing this, both will be fixed:-))

comment:4 by kaoutsis, 17 years ago

the same applies to pthread_key_delete_2-1

comment:5 by axeld, 17 years ago

Component: - GeneralSystem/libroot.so
Status: reopenednew

I recently changed some stuff in the pthread implementation, so I guess I'm to blame. I'll have a look.

comment:6 by axeld, 17 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev24998.

Note: See TracTickets for help on using tickets.